# Nearby-Earthquakes

./: Dockerfile  LICENCE.txt  README.rst  pyproject.toml
src/find_nearby_earthquakes/: earthquake_API.py  file_writer.py  main.py  utils.py
tests/: test_earthquake_API.py  test_file_writer.py
